--- a/build.gradle
+++ b/build.gradle
@@ -26,5 +26,7 @@ repositories {
 
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
+    //Test dependencies
     testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile('org.mockito:mockito-all:jar:2.0.2-beta')
 }
