--- a/settings.gradle
+++ b/settings.gradle
@@ -3,4 +3,5 @@ include 'kodilla-testing'
 include 'kodilla-stream'
 include 'kodilla-examples'
 include 'kodilla-stream'
+include 'kodilla-exception'
 
