--- a/kodilla-hibernate/build.gradle
+++ b/kodilla-hibernate/build.gradle
@@ -28,5 +28,6 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-jdbc')
     compile('org.springframework.boot:spring-boot-starter-validation')
     runtime('mysql:mysql-connector-java')
+    compile('org.apache.commons:commons-lang3:3.8')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
