--- a/kodilla-jdbc/build.gradle
+++ b/kodilla-jdbc/build.gradle
@@ -12,6 +12,12 @@ repositories {
 }
 
 dependencies {
-    compile('org.springframework.boot:spring-boot-starter-web')
-    testCompile('org.springframework.boot:spring-boot-starter-test')
+    compile 'org.clojure:java.jdbc:jar:0.7.8'
+
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+
 }
+
+
+
+
