--- a/kodilla-patterns2/build.gradle
+++ b/kodilla-patterns2/build.gradle
@@ -26,5 +26,8 @@ repositories {
 
 dependencies {
     compile('org.springframework.boot:spring-boot-starter')
+    compile group: 'org.springframework', name: 'spring-aop', version: '5.1.0.RELEASE'
+
+
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
