--- a/kodilla-jdbc/build.gradle
+++ b/kodilla-jdbc/build.gradle
@@ -12,6 +12,7 @@ repositories {
 }
 
 dependencies {
-    compile('org.springframework.boot:spring-boot-starter-web')
-    testCompile('org.springframework.boot:spring-boot-starter-test')
+    compile 'mysql:mysql-connector-java:8.0.12'
+
+    testCompile group: 'junit', name: 'junit', version: '4.12'
 }
