--- a/settings.gradle
+++ b/settings.gradle
@@ -5,6 +5,6 @@ include 'kodilla-examples'
 include 'kodilla-exception'
 include 'kodilla-good-patterns'
 include 'kodilla-patterns' 
-//include 'kodilla-jdbc'
+include 'kodilla-jdbc'
 
 
