--- a/kodilla-jdbc/build.gradle
+++ b/kodilla-jdbc/build.gradle
@@ -12,10 +12,9 @@ repositories {
 }
 
 dependencies {
-    compile 'org.clojure:java.jdbc:jar:0.7.8'
+    compile 'mysql:mysql-connector-java:8.0.12'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
-
 }
 
 
