--- a/kodilla-patterns2/build.gradle
+++ b/kodilla-patterns2/build.gradle
@@ -26,8 +26,7 @@ repositories {
 
 dependencies {
     compile('org.springframework.boot:spring-boot-starter')
-    compile('org.springframework:spring-aop:5.1.0.RELEASE')
-
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-aop'
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
