--- a/kodilla-patterns2/build.gradle
+++ b/kodilla-patterns2/build.gradle
@@ -26,7 +26,7 @@ repositories {
 
 dependencies {
     compile('org.springframework.boot:spring-boot-starter')
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-aop'
+    compile('org.springframework.boot:spring-boot-starter-aop')
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
