--- a/settings.gradle
+++ b/settings.gradle
@@ -10,4 +10,5 @@ include 'kodilla-patterns2'
 include 'kodilla-hibernate'
 include 'kodilla-spring'
 include 'kodilla-spring-web'
+include 'kodilla-testing2'
 
