--- a/kodilla-testing2/build.gradle
+++ b/kodilla-testing2/build.gradle
@@ -11,5 +11,7 @@ repositories {
 }
 
 dependencies {
+    compile 'org.seleniumhq.selenium:selenium-java:3.14.0'
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
