--- a/kodilla-testing2/build.gradle
+++ b/kodilla-testing2/build.gradle
@@ -14,4 +14,6 @@ dependencies {
     compile 'org.seleniumhq.selenium:selenium-java:3.14.0'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.assertj', name: 'assertj-core', version: '3.11.1'
+
 }
